# stuff-build-systems-do-

./: .gitignore  Cargo.toml  ebnf  out.html  readme.md  todo
fuzz/: Cargo.toml
fuzz/corpus/lexer_basic/: chunks.txt  directives.txt  edge_cases.txt  empty_and_boundary.txt  headings.txt  long_inputs.txt  nested_directives.txt  punctuation.txt  references.txt  unicode_edge.txt
fuzz/fuzz_targets/: fuzz_target_1.rs  lexer_tokens.rs  nested_directives.rs  parser_fuzz.rs  unicode_fuzz.rs
src/: lib.rs  main.rs
src/bs/: build_system.rs  builder.rs  cache.rs  clean.rs  config.rs  mod.rs  registry.rs  status.rs
src/markup/: assembler.rs  ast.rs  lexer.rs  mod.rs  parser.rs  tsink.rs
src/markup/lexer/: default_handlers.rs  inline.rs  lexer.rs  mod.rs  sink.rs  span.rs  state.rs  tests.rs  token.rs
src/markup/lexer/handlers/: mod.rs
src/markup/lexer/handlers/line/: blockquote.rs  chunk.rs  comment.rs  directive.rs  heading.rs  horizontal_rule.rs  list.rs  mod.rs  paragraph.rs
src/markup/semantic/: arena.rs  deps.rs  images.rs  mod.rs  resolve.rs  types.rs
src/repl/: highlight.rs  input_highlighter.rs  mod.rs
test_envs/basic/: file1.md  file2.md  file2.stuff  file3.md  file4.md  file5.stuff  stuff.toml
test_envs/basic/.cache/: cache.json
